--- a/UFOs/index.html
+++ b/UFOs/index.html
@@ -44,10 +44,21 @@
                         <label for="date">Enter Date</label>
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
-                    <li class="list-group"class="bg-dark">
-                        <button id="filter-btn" type="button" class="btn btn-dark">
-                            Filter Table
-                        </button>
+                  <li class="list-group" class="bg-dark">
+                    <label for="date">Enter City</label>
+                    <input type="text" placeholder="Benton" id="city"/>
+                    </li>
+                    <li class="list-group" class="bg-dark">
+                        <label for ="date">Enter State</label>
+                        <input type="text" placeholder="CO" id="state"/>
+                    </li>
+                    <li class="list-group" class="bg-dark">
+                        <label for ="date">Enter Country</label>
+                        <input type="text" placeholder="United States" id="country"/>
+                    </li>
+                    <li class="list-group" class="bg-dark">
+                        <label for ="date">Enter Shape</label>
+                        <input type="text" placeholder="Circle" id="shape"/>
                     </li>
                 </ul>
               </form>
